fix spacing between form blocks

--- a/src/global.overrides.css
+++ b/src/global.overrides.css
@@ -19,12 +19,6 @@ a:hover {
   text-decoration: underline;
 }
 
-#counter {
-  position: absolute;
-  left: -1000px;
-  top: -1000px;
-}
-
 .ui.selection.dropdown,
 .ui.selection.dropdown:hover,
 .ui.input > input,
